--- a/Main/index.html
+++ b/Main/index.html
@@ -10,11 +10,15 @@
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
 </head>
 <body>
+	<h1>ID3 Algorithm</h1>
     <div class="container">
+
 		<div class="tree">
 	</div>
     </div>
+
 </body>
 </html>
 
 <script src="./index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
