--- a/Main/index.html
+++ b/Main/index.html
@@ -3,19 +3,33 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Convert Excel to HTML Table using JavaScript</title>
+	<title>Cây Quyết Định - ID3</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="index.css"/>
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
 </head>
 <body>
+
 	<h1>ID3 Algorithm</h1>
+	<div class="container">
+    	<div class="card">
+    		<div class="card-header"><b>Select Excel File</b></div>
+    		<div class="card-body">
+    			
+                <input type="file" id="excel_file" />
+
+    		</div>
+    	</div>
+        <div id="excel_data" class="mt-5"></div>
+	</div>
     <div class="container">
 
 		<div class="tree">
 	</div>
+	
     </div>
+	
 
 </body>
 </html>
