--- a/Main/index.html
+++ b/Main/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<h1>ID3 Algorithm</h1>
+	<h1>Thuật Toán ID3</h1>
 	<div class="container">
     	<div class="card">
     		<div class="card-header"><b>Select Excel File</b></div>
