--- a/Main/index.html
+++ b/Main/index.html
@@ -14,15 +14,20 @@
 	<h1>Thuật Toán ID3</h1>
 	<div class="container">
     	<div class="card">
-    		<div class="card-header"><b>Select Excel File</b></div>
+    		<div class="card-header"><b>Chọn File Excel</b></div>
     		<div class="card-body">
     			
                 <input type="file" id="excel_file" />
 
     		</div>
     	</div>
+    	
         <div id="excel_data" class="mt-5"></div>
 	</div>
+	<div class="content">
+		
+	</div>
+	<h1>Cây Quyết Định</h1>
     <div class="container">
 
 		<div class="tree">
